--- a/css/end.css
+++ b/css/end.css
@@ -17,25 +17,21 @@
   text-align: center;
   position: absolute;
   top: 200px;
-  left: 300px;
-  width: 500px;
-  height:450px;
+  left: 350px;
+  width: 400px;
   background-color: white;
   opacity: 1;
   z-index: 5;
+  box-sizing: border-box;
+  padding: 20px;
 }
 .end-room-description .description{
   font-size: 20px;
-  margin-top: 50px;
-  height: 300px
 }
 .btn-container{
   margin-top: 30px;
 }
 .btn-container .btn{
-  font-size: 20px;
-  box-sizing: border-box;
-  padding: 10px 15px;
   margin-left: 10px;
   margin-right: 10px;
   background-color: var(--main-white);
@@ -78,7 +74,10 @@
 }
 
 @media only screen and (max-width:600px) {
-
+.info-txt{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 .main-bar .end-room-description{
   box-sizing: border-box;
   overflow: hidden;
