--- a/css/mypage.css
+++ b/css/mypage.css
@@ -7,6 +7,10 @@
   margin-left: 5px;
   margin-right: 5px;
 }
+.total-time, .total-time-unit{
+  transform: translateX(14px);
+  display: inline-block;
+}
 .total-room{
   font-size: 20px;
   width: 700px;
@@ -64,7 +68,7 @@
 
 .task-table th,.task-table td{
   width: 25%;
-  padding: 5px 0;
+  padding: 10px 0;
 }
 
 @media only screen and (max-width:600px) {
@@ -77,13 +81,13 @@
     width: 100%;
   }
   .task-table .table-title{
-    font-size: 14px;
+    font-size: 16px;
   }
   .total-time{
     font-size: 50px;
   }
   .total-study-time{
-    margin-top: 10px;
+    margin-top: 30px;
     margin-bottom: 0;
     font-size: 14px;
   }
