--- a/css/withdrow.css
+++ b/css/withdrow.css
@@ -46,6 +46,9 @@
 }
 
 @media only screen and (max-width:600px) {
+  .withdrow-confirm{
+    font-size: 16px;
+  }
   .withdrow-confirm .btn-container{
     width: 100%;
     margin-top: 20px;
@@ -54,11 +57,22 @@
   .btn-container .btn{
     float: unset;
     margin-top: 20px;
+    box-sizing: border-box;
+    font-size: 16px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .btn-container .btn-back{
     display: block;
     box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
+  }
+  .form-title{
+    font-size: 20px;
+  }
+  .withdrow-confirm .form-description{
+    font-size: 16px;
   }
 }
