update phone styles

--- a/css/room.css
+++ b/css/room.css
@@ -214,6 +214,7 @@
 .comment-container .comment{
   margin: 0;
   position: relative;
+  font-size: 12px;
 }
 .comment-container .user-ballon {
   position: absolute;
