add frontend tool

--- a/css/color.css
+++ b/css/color.css
@@ -3,7 +3,8 @@
   --main-blue : #2f9cf9;
   --main-white : #f1f1f1;
 
-  --primary-blue:#1f94fa;
+  /* --primary-blue:#1f94fa; */
+  --primary-blue:#449ed8;
   --bg-blue:#75befd;
   --text-muted:#666363;
 }
