--- a/css/common.css
+++ b/css/common.css
@@ -203,9 +203,9 @@ input[type=checkbox]:checked + .js-check-checkbox::after {
   clear: both;
 }
 .header-left .header-logo{
-  height: 20px;
+  height: 30px;
   width: 100%;
-  margin-top: 25px;
+  margin-top: 22.5px;
 }
 .header-right{
   float: right;
@@ -300,7 +300,7 @@ input[type=checkbox]:checked + .js-check-checkbox::after {
 }
 .btn-signup{
   color: rgba(128, 128, 128,0.8);
-  color: var(--main-blue);
+  color: var(--primary-blue);
   background-color: white;
   box-sizing: border-box;
   font-weight: bold;
@@ -372,6 +372,7 @@ input[type=checkbox]:checked + .js-check-checkbox::after {
 }
 .nav-active{
   color: var(--primary-blue);
+  font-weight: bold;
 }
 .d-none{
   display: none;
@@ -740,5 +741,3 @@ input[type=checkbox]:checked + .js-check-checkbox::after {
  }
 }
 
-@media only screen and (max-width:1025px) {
-}
