--- a/css/form.css
+++ b/css/form.css
@@ -53,7 +53,14 @@
 .form .room-tag-title{
   text-align: right;
 }
-
+.form.signup-form .login-support-items {
+  clear: both;
+  font-size: 14px;
+}
+.form-lead{
+  font-size: 14px;
+  color:rgb(43, 43, 43);
+}
 
 
 @media only screen and (max-width:600px) {
