“feat:マイページ機能、プロフィール編集機能、ユーザーフォロー機能、終了タスク管理機能、部屋内でのメッセージ機能追加、fix:時計の針が制限時間までに一周するようにアニメーションを調整 #2”

--- a/TaskLive/resources/css/app.css
+++ b/TaskLive/resources/css/app.css
@@ -3,7 +3,8 @@
 @import './generic/normalize.css' layer(generic);
 @import './components/_header.css' layer(components);
 @import './components/_roomsummary.css' layer(components);
-@import './components/_roomsummaryclock.css' layer(components);
+@import './components/_roomshow.css' layer(components);
+@import './components/_roomclock.css' layer(components);
 
 @tailwind base;
 @tailwind components;
