--- a/resources/css/components/_roomshow.css
+++ b/resources/css/components/_roomshow.css
@@ -276,7 +276,7 @@
   cursor: pointer;
 }
 
-@media only screen and (max-width:600px) {
+@media (max-width:768px) {
   .clock{
     display: none;
   }
@@ -429,3 +429,4 @@
   }
 
 }
+
